Added beefed up JVM settings.